--- a/_includes/posts_paginator.html
+++ b/_includes/posts_paginator.html
@@ -19,7 +19,7 @@
                     <a href={{ "tags.html#" | append: tag | pretend: site.baseurl }} class="post-tag">{{ tag }}</a>
                     {% endfor %}
                 {% endif %}
-                <time class="post-date" datetime="{{ post.date | date:"%y-%m-%d" }}">{{ post.date | date_to_string }}</time>
+                <time class="post-date" datetime="{{ post.date | date:"%d-%m-%y" }}">{{ post.date | date_to_string }}</time>
           </footer>
       </li>
   </a>
